First classifier as API

--- a/notebooks/02_FirstModel.ipynb
+++ b/notebooks/02_FirstModel.ipynb
@@ -13,14 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "portuguese-passing",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
     "from IPython.display import Markdown\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "id": "signed-duncan",
    "metadata": {},
    "outputs": [],
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "id": "independent-latin",
    "metadata": {},
    "outputs": [
@@ -161,7 +160,7 @@
        "RandomForestClassifier(class_weight='balanced', max_depth=10, n_estimators=200)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "id": "italian-empire",
    "metadata": {},
    "outputs": [],
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "id": "brazilian-nirvana",
    "metadata": {},
    "outputs": [
@@ -204,7 +203,7 @@
      "data": {
       "text/markdown": [
        "\n",
-       "Balanced accuracy on the training data 0.910\n",
+       "Balanced accuracy on the training data 0.907\n",
        "\n",
        "Balanced accuracy on the test data 0.873\n",
        "\n",
@@ -218,7 +217,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,9 +304,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "automated-anderson",
+   "metadata": {},
+   "source": [
+    "## Final Training\n",
+    "\n",
+    "Finally, the model is trained on the full dataset and stored in a pickle file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ready-workshop",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/marenz/miniconda3/envs/model2cloud/lib/python3.9/site-packages/category_encoders/utils.py:21: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
+      "  elif pd.api.types.is_categorical(cols):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(class_weight='balanced', max_depth=10, n_estimators=200)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = data.drop(columns=['y'])\n",
+    "y = data['y']\n",
+    "\n",
+    "x = enc.fit_transform(x, y)\n",
+    "clf.fit(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "inside-volume",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "accredited-seating",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dir = Path('../app/model/')\n",
+    "model_dir.mkdir(exist_ok=True, parents=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "bizarre-physics",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(model_dir / 'simple_enc.pkl', 'wb') as handle:\n",
+    "    pickle.dump(enc, handle)\n",
+    "    \n",
+    "with open(model_dir / 'simple_rf.pkl', 'wb') as handle:\n",
+    "    pickle.dump(clf, handle)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invalid-literature",
+   "id": "certain-samuel",
    "metadata": {},
    "outputs": [],
    "source": []
