Remove 'duration' column from training data
The duration columns should not be used, as it is only
available after the marketing call and is clearly
correlated to the outcome

--- a/notebooks/preprocessing/check_and_convert_input.ipynb
+++ b/notebooks/preprocessing/check_and_convert_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "respiratory-marina",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "formal-breakfast",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "planned-blank",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "least-spring",
    "metadata": {},
    "outputs": [],
@@ -44,12 +44,16 @@
     "assert set(data.columns) == set(['age', 'job', 'marital', 'education', 'default', 'housing', 'loan',\n",
     "                                 'contact', 'month', 'day_of_week', 'duration', 'campaign', 'pdays',\n",
     "                                 'previous', 'poutcome', 'emp.var.rate', 'cons.price.idx',\n",
-    "                                 'cons.conf.idx', 'euribor3m', 'nr.employed', 'y'])"
+    "                                 'cons.conf.idx', 'euribor3m', 'nr.employed', 'y'])\n",
+    "\n",
+    "# drop duration columns, since it should not be used for building the model,\n",
+    "# see data information '../../data/bank-additional-names.txt'\n",
+    "data = data.drop(columns=['duration'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "developing-browse",
    "metadata": {},
    "outputs": [],
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "political-vault",
    "metadata": {},
    "outputs": [],
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "upper-chamber",
    "metadata": {},
    "outputs": [],
