First iteration of preprocessing

--- a/app/preprocess.ipynb
+++ b/app/preprocess.ipynb
@@ -36,12 +36,27 @@
     "                 marital={'replace_unknown': False},\n",
     "                 education={'replace_unknown': False,\n",
     "                            'replace_illiterate': 'mode'},\n",
-    "                 default={'replace_yes': 'unknown'}\n",
+    "                 default={'replace_yes': 'unknown'},\n",
+    "                 loan={'replace_unknown': False},\n",
+    "                 month={'drop': True},\n",
+    "                 pdays={'replace_999': False},\n",
+    "                 emp_var_rate={'drop': False},\n",
+    "                 cons_price_idx={'drop': False},\n",
+    "                 cons_conf_idx={'drop': False},\n",
+    "                 nr_employed={'drop': False}\n",
     "                 ):\n",
     "\n",
     "        self.job = job\n",
     "        self.marital = marital\n",
     "        self.education = education\n",
+    "        self.default = default\n",
+    "        self.loan = loan\n",
+    "        self.month = month\n",
+    "        self.pdays = pdays\n",
+    "        self.emp_var_rate = emp_var_rate\n",
+    "        self.cons_price_idx = cons_price_idx\n",
+    "        self.cons_conf_idx = cons_conf_idx\n",
+    "        self.nr_employed = nr_employed\n",
     "\n",
     "    def fit(self, X, y, **fit_params):\n",
     "        self.job_mode = X['job'].mode().values[0]\n",
@@ -55,11 +70,21 @@
     "\n",
     "        self.default_categories = set(X['default'].unique())\n",
     "\n",
+    "        self.loan_categories = set(X['loan'].unique())\n",
+    "\n",
+    "        self.contact_categories = set(X['contact'].unique())\n",
+    "\n",
+    "        self.doy_categories = set(X['day_of_week'].unique())\n",
+    "\n",
+    "        self.poutcome_categories = set(X['poutcome'])\n",
+    "\n",
+    "        return self\n",
+    "\n",
     "    def transform(self, X, **trans_params):\n",
     "        X = X.copy()\n",
     "\n",
     "        # input data should not contain any NA's\n",
-    "        assert X.insa().sum().sum() == 0\n",
+    "        assert X.isna().sum().sum() == 0\n",
     "\n",
     "        # age\n",
     "        assert (X['age'] >= 0).all()\n",
@@ -95,20 +120,85 @@
     "        elif not self.education['replace_unknown']:\n",
     "            pass\n",
     "        else:\n",
-    "            raise NameError(\"Unknown config for martial['replace_unknown']\")\n",
+    "            raise NameError(\"Unknown config for education['replace_unknown']\")\n",
     "\n",
     "        if self.education['replace_illiterate'] == 'mode':\n",
     "            X['education'].replace({'illiterate': self.education_mode})\n",
     "        else:\n",
-    "            raise NameError(\"Unknown config for martial['replace_illiterate']\")\n",
+    "            raise NameError(\"Unknown config for education['replace_illiterate']\")\n",
     "\n",
     "        # default\n",
     "        assert (set(X['default'].unique()) - self.default_categories) == set()\n",
     "\n",
-    "        if self.education['replace_yes'] == 'unknown':\n",
+    "        if self.default['replace_yes'] == 'unknown':\n",
     "            X['default'].replace({'yes': 'unknown'})\n",
     "        else:\n",
-    "            raise NameError(\"Unknown config for martial['replace_illiterate']\")\n",
+    "            raise NameError(\"Unknown config for default['replace_yes']\")\n",
+    "\n",
+    "        # loan\n",
+    "        assert (set(X['loan'].unique()) - self.loan_categories) == set()\n",
+    "\n",
+    "        if not self.loan['replace_unknown']:\n",
+    "            pass\n",
+    "        else:\n",
+    "            raise NameError(\"Unknown config for loan['replace_unknown']\")\n",
+    "\n",
+    "        # contact\n",
+    "        assert (set(X['contact'].unique()) - self.contact_categories) == set()\n",
+    "\n",
+    "        # month\n",
+    "        if self.month['drop']:\n",
+    "            X = X.drop(columns=['month'])\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "        # day_of_week\n",
+    "        assert (set(X['day_of_week'].unique()) - self.doy_categories) == set()\n",
+    "\n",
+    "        # campaign\n",
+    "        assert (X['campaign'] >= 0).all()\n",
+    "\n",
+    "        # pdays\n",
+    "        assert (X['pdays'] >= 0).all()\n",
+    "\n",
+    "        if not self.pdays['replace_999']:\n",
+    "            pass\n",
+    "        elif self.pdays['replace_999'] == '-1':\n",
+    "            X['pdays'] = X['pdays'].replace({999, -1})\n",
+    "        else:\n",
+    "            raise NameError(\"Unknown config for loan['replace_unknown']\")\n",
+    "\n",
+    "        # previous\n",
+    "        assert (X['previous'] >= 0).all()\n",
+    "\n",
+    "        # poutcome\n",
+    "        assert (set(X['poutcome'].unique()) - self.poutcome_categories) == set()\n",
+    "\n",
+    "        drop_cols = []\n",
+    "\n",
+    "        # cons.conf.idx\n",
+    "        if self.cons_conf_idx['drop']:\n",
+    "            drop_cols.append('cons.conf.idx')\n",
+    "\n",
+    "        # emp.var.rate\n",
+    "        if self.emp_var_rate['drop']:\n",
+    "            drop_cols.append('emp.var.rate')\n",
+    "\n",
+    "        # cons.price.idx\n",
+    "        if self.cons_price_idx['drop']:\n",
+    "            drop_cols.append('cons.price.idx')\n",
+    "\n",
+    "        # cons.conf.idx\n",
+    "        if self.cons_conf_idx['drop']:\n",
+    "            drop_cols.append('cons.conf.idx')\n",
+    "\n",
+    "        # euribor3m\n",
+    "\n",
+    "        # nr.employed\n",
+    "        if self.cons_conf_idx['drop']:\n",
+    "            drop_cols.append('cons.conf.idx')\n",
+    "\n",
+    "        X = X.drop(columns=drop_cols)\n",
     "\n",
     "        return X"
    ]
