--- a/app/preprocess.ipynb
+++ b/app/preprocess.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "published-arbitration",
+   "id": "indian-climb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apparent-tower",
+   "id": "strategic-investor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bottom-studio",
+   "id": "published-arbitration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "        assert (set(X['marital'].unique()) - self.marital_categories) == set()\n",
     "\n",
     "        if self.marital['replace_unknown'] == 'mode':\n",
-    "            X['marital'].replace({'unknown': self.marital_mode})\n",
+    "            X['marital'] = X['marital'].replace({'unknown': self.marital_mode})\n",
     "        elif not self.marital['replace_unknown']:\n",
     "            pass\n",
     "        else:\n",
@@ -116,14 +116,14 @@
     "        assert (set(X['education'].unique()) - self.education_categories) == set()\n",
     "\n",
     "        if self.education['replace_unknown'] == 'mode':\n",
-    "            X['education'].replace({'unknown': self.education_mode})\n",
+    "            X['education'] = X['education'].replace({'unknown': self.education_mode})\n",
     "        elif not self.education['replace_unknown']:\n",
     "            pass\n",
     "        else:\n",
     "            raise NameError(\"Unknown config for education['replace_unknown']\")\n",
     "\n",
     "        if self.education['replace_illiterate'] == 'mode':\n",
-    "            X['education'].replace({'illiterate': self.education_mode})\n",
+    "            X['education'] = X['education'].replace({'illiterate': self.education_mode})\n",
     "        else:\n",
     "            raise NameError(\"Unknown config for education['replace_illiterate']\")\n",
     "\n",
@@ -131,7 +131,7 @@
     "        assert (set(X['default'].unique()) - self.default_categories) == set()\n",
     "\n",
     "        if self.default['replace_yes'] == 'unknown':\n",
-    "            X['default'].replace({'yes': 'unknown'})\n",
+    "            X['default'] = X['default'].replace({'yes': 'unknown'})\n",
     "        else:\n",
     "            raise NameError(\"Unknown config for default['replace_yes']\")\n",
     "\n",
@@ -164,7 +164,7 @@
     "        if not self.pdays['replace_999']:\n",
     "            pass\n",
     "        elif self.pdays['replace_999'] == '-1':\n",
-    "            X['pdays'] = X['pdays'].replace({999, -1})\n",
+    "            X['pdays'] = X['pdays'].replace({999: -1})\n",
     "        else:\n",
     "            raise NameError(\"Unknown config for loan['replace_unknown']\")\n",
     "\n",
@@ -193,10 +193,11 @@
     "            drop_cols.append('cons.conf.idx')\n",
     "\n",
     "        # euribor3m\n",
+    "        # drop not useful\n",
     "\n",
     "        # nr.employed\n",
-    "        if self.cons_conf_idx['drop']:\n",
-    "            drop_cols.append('cons.conf.idx')\n",
+    "        if self.nr_employed['drop']:\n",
+    "            drop_cols.append('nr.employed')\n",
     "\n",
     "        X = X.drop(columns=drop_cols)\n",
     "\n",
