Prepare tuning notebooks

--- a/app/preprocess.ipynb
+++ b/app/preprocess.ipynb
@@ -97,7 +97,7 @@
     "        if self.job['replace_unknown'] == 'mode':\n",
     "            X['job'] = X['job'].replace({'unknown': self.job_mode})\n",
     "        elif not self.job['replace_unknown']:\n",
-    "            # CAUTION: may be not possibel, since unknown has only 80 samples in training set\n",
+    "            # CAUTION: may be not possible, since unknown has only 80 samples in training set\n",
     "            pass\n",
     "        else:\n",
     "            raise NameError(\"Unknown config for job['replace_unknown']\")\n",
