--- a/notebooks/preprocessing/check_and_convert_input.ipynb
+++ b/notebooks/preprocessing/check_and_convert_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "respiratory-marina",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "formal-breakfast",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "planned-blank",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "least-spring",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
+   "id": "illegal-peeing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41188 entries, 0 to 41187\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   age             41188 non-null  int64  \n",
+      " 1   job             41188 non-null  object \n",
+      " 2   marital         41188 non-null  object \n",
+      " 3   education       41188 non-null  object \n",
+      " 4   default         41188 non-null  object \n",
+      " 5   housing         41188 non-null  object \n",
+      " 6   loan            41188 non-null  object \n",
+      " 7   contact         41188 non-null  object \n",
+      " 8   month           41188 non-null  object \n",
+      " 9   day_of_week     41188 non-null  object \n",
+      " 10  campaign        41188 non-null  int64  \n",
+      " 11  pdays           41188 non-null  int64  \n",
+      " 12  previous        41188 non-null  int64  \n",
+      " 13  poutcome        41188 non-null  object \n",
+      " 14  emp.var.rate    41188 non-null  float64\n",
+      " 15  cons.price.idx  41188 non-null  float64\n",
+      " 16  cons.conf.idx   41188 non-null  float64\n",
+      " 17  euribor3m       41188 non-null  float64\n",
+      " 18  nr.employed     41188 non-null  float64\n",
+      " 19  y               41188 non-null  object \n",
+      "dtypes: float64(5), int64(4), object(11)\n",
+      "memory usage: 6.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "developing-browse",
    "metadata": {},
    "outputs": [],
@@ -67,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "political-vault",
    "metadata": {},
    "outputs": [],
@@ -78,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "upper-chamber",
    "metadata": {},
    "outputs": [],
